portstyle.css
:root {
  --text-color: #5e5c5c;
  --highlight-color: #d99559;
  --secondary-color: #79b4d9;
  --secondary-background-color: #d9e5d6;
  --font: Roboto, sans-serif;
}
* {
  margin: 0px;
  box-sizing: border-box;
}
body {
  margin-left: 0%;
  margin-right: 0%;
  font-family: var(--font);
  background-color: white;
  display: block;
  line-height: 1.6;
  color: var(--text-color);
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* padding-top: 1rem; */
  padding-left: 1rem;
  padding-right: 1rem;
  background-color: #d9e5d6;
  border-bottom: 1px solid #808383;
  /* position: relative; */
  top: 0;
  z-index: 2;
  width: 100%;
}
#menuBtn {
  display: none;
}
#hero-banner {
  height: 70vh;
  width: 100%;
  background: url("watermarkPNG.png") no-repeat fixed bottom center/cover;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  position: relative;
}
h1 {
  text-align: center;
  color: var(--highlight-color);
  margin-top: 10vh;
  font-family: "Roboto Slab", serif;
  font-size: 2.25rem;
}

h2 {
  font-family: "Roboto", sans-serif;
  font-size: 1.25rem;
  color: var(--highlight-color);
  margin-top: 2.5rem;
}
h3 {
  color: var(--secondary-color);
  text-align: center;
}

.image {
  display: block;
  margin-right: 20px;
  margin-bottom: 20px;
  width: 25vh;
  height: 26vh;
  border: 2px solid;
  color: var(--secondary-color);
  float: left;
}

hr {
  border: 1px solid;
  color: var(--highlight-color);
  clear: both;
}

.copyright {
  font-size: 0.8rem;
  text-align: center;
  margin-bottom: 0px;
  padding-top: 1rem;
  padding-bottom: 2rem;
}
nav ul {
  list-style-type: none;
}
nav ul li {
  display: inline-block;
  color: var(--text-color);
}
nav ul li :hover {
  display: inline-block;
  color: var(--text-color);
  text-decoration: underline;
}
.fixed {
  position: sticky;
  top: 0;
  right: auto;
  width: 100%;
  background-color: white;
  opacity: 0.5;
  font-size: 60%;
  transition: 0.5s;
  z-index: 10;
  transition-duration: 0.5s;
}

li {
  display: inline-block;
}
html {
  scroll-behavior: smooth;
}

table {
  font-family: "Roboto", sans-serif;
  border-collapse: collapse;
  width: 50vh;
}

th {
  border: 2px solid #0fa3b1;
  text-align: left;
  padding: 8px;
}
.contacts {
  border: #d99559 1px solid;
}
.contacts td:nth-child(even) {
  background-color: #d99559;
}
td {
  padding-left: 1px;
  text-align: center;
}
.alignRight {
  text-align: right;
}
.contact {
  margin: 0 auto;
}
footer {
  background-color: var(--secondary-background-color);
  padding-top: 20px;
}
.margin {
  margin-left: 15vw;
  margin-right: 15vw;
  margin-bottom: 1rem;
}

#blacknwhite {
  margin-left: 1rem;
  float: right;
}
#logo {
  font-family: "Monoton", cursive;
  font-size: 1em;
  display: inline-block;
  vertical-align: middle;
  justify-content: flex-start;
  vertical-align: super;
}
#logoX {
  font-family: "Monoton", cursive;
  vertical-align: middle;
  font-size: 6em;
  line-height: 1;
  align-self: flex-start;
  display: inline-block;
  vertical-align: middle;
}
a:link {
  text-decoration: none;
  color: var(--text-color);
}
a:visited {
  text-decoration: none;
  color: var(--text-color);
}
a:hover {
  text-decoration: none;
  color: var(--text-color);
  /* font-weight: 600; */
  font-size: 18px;
  transition: 0.3s;
}
a:active {
  text-decoration: none;
  color: var(--text-color);
  font-weight: 900;
}
i {
  margin-left: 10px;
}

#underline {
  text-decoration: underline;
}
.past {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-left: 15vw;
  margin-right: 15vw;
  margin-bottom: 1rem;
}
.skills {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-left: 15vw;
  margin-right: 15vw;
  margin-bottom: 1rem;
}
.icon {
  font-size: 60px;
  margin: 0;
  text-align: center;
}
img {
  width: 100%;
}
#xp {
  width: 40vh;
  float: left;
  border: 2px solid;
  color: #79b4d9;
  margin-right: 1rem;
  margin-bottom: 1rem;
}
.box {
  background-color: #d9e5d6;
  width: 30vh;
  border: 1px solid #808383;
  margin: 1rem;
  padding: 1rem;
}
.box:hover {
  background-color: #d9e5d6;
  width: 30vh;
  border: 1px solid #808383;
  margin: 1rem;
  padding: 1rem;
  box-shadow: 0px 0px 10px rgba(51, 51, 51, 0.26);
}
.box:nth-child(even) {
  background-color: rgba(85, 85, 85, 0.158);
}

/* 
h1.icon:nth-child(even) {
  background-color: #555;
} */
button {
  border: none;
  border-radius: 3px;
  padding: 10px;
  background-color: #d99559;
  cursor: pointer;
  color: white;
  transition: all 0.5s;
}
button:hover {
  box-shadow: #333 0px 0px 5px;
  font-size: 14px;
  transition-timing-function: ease-out;
}
input {
  width: 200px;
}
textarea {
  width: 200px;
}
#toTopBtn {
  display: none; /*Hidden by default*/
  position: fixed; /* Fixed/sticky position */
  bottom: 20px; /* Place the button at the bottom of the page */
  right: 30px; /* Place the button 30px from the right */
  z-index: 99; /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  background-color: #d99559; /* Set a background color */
  color: white; /* Text color */
  font-family: "Roboto", sans-serif;
  color: white;
  cursor: pointer; /* Add a mouse pointer on hover */
  padding: 15px; /* Some padding */
  border-radius: 3px; /* Rounded corners */
  font-size: 18px; /* Increase font size */
  transition-duration: 0.3s;
  opacity: 0.6;
}
#toTopBtn:hover {
  font-size: 19px;
  opacity: 1;
}

progress[value] {
  -webkit-appearance: none;
  appearance: none;
  max-width: 20vh;
  height: 20px;
}
progress[value]::-webkit-progress-bar {
  background-color: #eee;
  border-radius: 2px;
  box-shadow: 0 2px 5px #333;
}

progress[value]::-webkit-progress-value {
  background-image: -webkit-linear-gradient(
      -45deg,
      transparent 33%,
      rgba(0, 0, 0, 0.1) 33%,
      rgba(0, 0, 0, 0.1) 66%,
      transparent 66%
    ),
    -webkit-linear-gradient(top, rgba(255, 255, 255, 0.25), rgba(0, 0, 0, 0.25)),
    -webkit-linear-gradient(left, var(--secondary-color), var(--highlight-color));

  border-radius: 2px;
  background-size: 35px 20px, 100% 100%, 100% 100%;
}
.skillLevel {
  margin-top: 1rem;
  text-align: center;
}

/****************Gallery****************/

.gallery-grid {
  display: grid;
  justify-content: center;
  grid-template-columns: repeat(6, 150px);
  grid-template-rows: repeat(6, 150px);
  grid-gap: 1.5rem;
  grid-template-areas:
    "a a b b c c"
    "a a d d c c"
    "i h h h c c"
    "f h h h e e"
    "g h h h e e";
  margin: 1.5rem;
}

.grid-item-1 {
  grid-area: a;
}
.grid-item-2 {
  grid-area: b;
}
.grid-item-3 {
  grid-area: c;
}
.grid-item-4 {
  grid-area: d;
}
.grid-item-5 {
  grid-area: e;
}
.grid-item-6 {
  grid-area: f;
}
.grid-item-7 {
  grid-area: g;
}
.grid-item-8 {
  grid-area: h;
}
.grid-item-9 {
  grid-area: i;
}
.grid-item {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.watermark {
  font-size: 12px;
  position: absolute;
  bottom: 0;
  right: 1rem;
  color: white;
}

/******mobile versions*******/
@media (max-width: 768px) {
  body {
    background-color: tomato;
  }
}
@media (max-width: 576px) {
  body {
    background-color: teal;
  }
  section {
    flex-direction: column;
  }

  .image {
    display: block;
    /* margin-bottom: 20px;
    margin-left: ; */
    margin-left: 1rem;
    float: left;
    border: 4px solid;
    color: #79b4d9;
  }
  .contact {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
  }
  #hero-banner {
    height: 70vh;
    width: 100%;
    background: url(watermarkPNG.png) no-repeat fixed center center/cover;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    position: relative;
  }
  nav ul {
    display: flex;
    flex-direction: column;
    list-style-type: none;
  }
  .past {
    justify-content: center;
  }
  .skills {
    justify-content: center;
  }

  /********menu button***********/
  nav ul {
    display: none;
    width: 100%;
    position: absolute;
    left: 0;
  }
  #menuBtn {
    display: block;
  }
  nav.responsive ul {
    display: block;
    background-color: var(--secondary-background-color);
    width: 100%;
    position: absolute;
    top: 73px;
    text-align: right;
    z-index: 99;
  }
  nav ul li {
    display: block;
  }
  nav ul li a {
    display: block;
    padding: 1rem 2rem;
  }
  .gallery-grid {
    display: block;
  }
}

